--- a/Adentis.Teste.Fernando/Resources/layout/activity_main.xml
+++ b/Adentis.Teste.Fernando/Resources/layout/activity_main.xml
@@ -1,7 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+	android:orientation="vertical"
     android:layout_height="match_parent">
-</RelativeLayout>
+
+	<RelativeLayout
+        android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:padding="10dp">
+		<EditText
+			android:id="@+id/textInput"
+			android:layout_width="262dp"
+			android:imeOptions="actionGo"
+			android:inputType="text"
+			android:layout_marginRight="10dp"
+			android:layout_height="50dp"/>
+
+		<Button
+			android:id="@+id/btnSubmitList"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_toRightOf="@id/textInput"
+			android:text="@string/txtButtonSubmit"/>
+    </RelativeLayout>
+
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/recyclerViewBody"
+		android:scrollbars="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
+</LinearLayout>
